# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import charactersRouter from "./characters";
 import itemsRouter from "./items";
 import journalRouter from "./journal";
 import questsRouter from "./quests";
+import partiesRouter from "./parties";
 import dmRouter from "./dm";
 
 const router: IRouter = Router();
@@ -12,7 +13,8 @@ router.use(healthRouter);
 router.use("/characters", charactersRouter);
 router.use("/characters/:characterId/items", itemsRouter);
 router.use("/characters/:characterId/journal", journalRouter);
-router.use("/quests", questsRouter);
+router.use("/parties", partiesRouter);
+router.use("/parties/:partyId/quests", questsRouter);
 router.use("/dm", dmRouter);
 
 export default router;
